1.5.8.1 (Try to fix music on iOS 3/?)

--- a/css/ArcadeTheme.css
+++ b/css/ArcadeTheme.css
@@ -19,7 +19,6 @@
 html {
   min-height: 100%;
   box-sizing: border-box;
-  cursor: pointer;
 }
 
 body {
